--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
     "minipass": "^7.1.2",
     "mixin-deep": "^1.3.2",
     "mkdirp": "^0.5.6",
+    "mongoose": "^8.9.6",
     "ms": "^2.0.0",
     "nanomatch": "^1.2.13",
     "negotiator": "^0.6.3",
@@ -266,7 +267,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "node-sass": "^9.0.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "prettier": "^3.4.2"
   }
 }
